examples/example_010/example_010.v
Require Import Top.A.

Goal True.
  Fail Check A.b.
  pose A.a; fail 0 "A.a exists".
